--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "jsonserver": "json-server --watch private/db.json"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +44,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
+    "tslint-config-airbnb": "^5.11.0",
     "typescript": "~2.9.2"
   }
 }
