--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-validator": "^5.3.0",
     "tingodb": "^0.6.1"
   },
   "devDependencies": {
