--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,9 @@
     "tingodb": "^0.6.1"
   },
   "devDependencies": {
+    "eslint": "^5.6.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "nodemon": "^1.18.4"
   }
 }
