BE: ESLint Compliance & Account changes
Made all files compliant with ESLint rules almost everywhere, and implemented the changes of the Account data type (field "balance" to "initialBalance")

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,8 +1,8 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "max-line-length": [
-      true,
+    "max-len": [
+      2,
       180
     ],
     "no-underscore-dangle": 0
