--- a/backend/package.json
+++ b/backend/package.json
@@ -17,15 +17,12 @@
     "tingodb": "^0.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-uglify": "^3.0.1",
+    "gulp-eslint": "^5.0.0",
+    "gulp-uglify-es": "^1.0.4",
     "nodemon": "^1.18.4"
   }
 }
