--- a/API Specification.yaml
+++ b/API Specification.yaml
@@ -59,7 +59,7 @@ paths:
             schema:
               $ref: '#/components/schemas/UpdateAccount'
       responses:
-        '204':
+        '201':
           description: Success
           content:
             application/json:
@@ -123,7 +123,7 @@ paths:
             schema:
               $ref: '#/components/schemas/UpdateTransaction'
       responses:
-        '204':
+        '201':
           description: Success
           content:
             application/json:
@@ -175,13 +175,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Category'
-  /categories/{name}:
+  /categories/{id}:
     put:
       description: Update an existing category
       tags:
         - category
       parameters:
-        - $ref: '#/components/parameters/CategoryName'
+        - $ref: '#/components/parameters/CategoryId'
       requestBody:
         required: true
         content:
@@ -189,7 +189,7 @@ paths:
             schema:
               $ref: '#/components/schemas/UpdateCategory'
       responses:
-        '204':
+        '201':
           description: Success
           content:
             application/json:
@@ -202,7 +202,7 @@ paths:
       tags:
         - category
       parameters:
-        - $ref: '#/components/parameters/CategoryName'
+        - $ref: '#/components/parameters/CategoryId'
       responses:
         '204':
           description: Success
@@ -227,17 +227,17 @@ components:
       required:
         - id
         - name
-        - balance
+        - initialBalance
       properties:
         id:
           type: integer
           format: int32
         name:
           type: string
-        balance:
+        initialBalance:
           type: number
           format: float
-          description: Account balance in Euro
+          description: Initial account balance in Euro
     NewAccount:
       type: object
       required:
@@ -249,7 +249,6 @@ components:
         initialBalance:
           type: number
           format: float
-          description: Initial account balance in Euro
     UpdateAccount:
       type: object
       properties:
@@ -335,8 +334,12 @@ components:
     Category:
       type: object
       required:
+        - id
         - name
       properties:
+        id:
+          type: number
+          format: int32
         name:
           type: string
         color:
@@ -367,13 +370,14 @@ components:
       schema:
         type: integer
         format: int32
-    CategoryName:
-      name: name
-      description: Name of the category
+    CategoryId:
+      name: id
+      description: ID of the category
       in: path
       required: true
       schema:
-        type: string
+        type: integer
+        format: int32
   responses:
     NotFound:
       description: The specified resource was not found
