--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --build-optimizer --vendor-chunk",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "docs": "typedoc --options typedoc.json src/app"
   },
   "private": true,
   "dependencies": {
@@ -46,6 +47,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "tslint-config-airbnb": "^5.11.0",
-    "typescript": "~2.9.2"
+    "typedoc": "^0.13.0",
+    "typescript": "~2.9.2",
+    "webdriver-manager": "^12.1.0"
   }
 }
