--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-clean": "^0.4.0",
     "gulp-eslint": "^5.0.0",
+    "gulp-jsdoc3": "^2.0.0",
     "gulp-uglify-es": "^1.0.4",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
